correct white spaces

--- a/themes/portio-hugo/assets/scss/_common.scss
+++ b/themes/portio-hugo/assets/scss/_common.scss
@@ -1,5 +1,5 @@
 .section{
-  padding: 30px 0;
+  padding: 100px 0 0 0;
 }
 
 .unstyle-list {
