--- a/themes/portio-hugo/assets/scss/components/_hero-section.scss
+++ b/themes/portio-hugo/assets/scss/components/_hero-section.scss
@@ -1,6 +1,5 @@
 .hero {
-  padding: 200px 0;
-  padding-bottom: 100px;
+  padding: 200px 0 50px 0;
   position: relative;
   display: flex;
   align-items: center;
