--- a/themes/portio-hugo/assets/scss/components/_resume-section.scss
+++ b/themes/portio-hugo/assets/scss/components/_resume-section.scss
@@ -1,6 +1,6 @@
 .resume{
     position: relative;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
     padding: 150px 0;
     @include desktop{
         margin-bottom: 40px;
