--- a/themes/portio-hugo/assets/scss/components/_testimonial-section.scss
+++ b/themes/portio-hugo/assets/scss/components/_testimonial-section.scss
@@ -1,7 +1,7 @@
 .testimonial {
   background: #f1f6f9;
   position: relative;
-  padding: 75px 0 150px 0;
+  padding: 100px 0 50px 0;
   @include desktop {
     padding: 100px 0;
   }
